--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 
 html,
 body {
-  height: 100%;
+  min-height: 100%;
   background: linear-gradient(#f4f0f3, #eaf3f7);
   font-family: "Mulish", sans-serif;
 }
